# majorproject-sem07

./: .dockerignore  .gitignore  Claude.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default.yaml  training.yaml
scripts/: detect.py  realtime.py  train.py
src/: __init__.py
src/classifier/: __init__.py  deepfake_classifier.py
src/features/: __init__.py  audio_encoder.py  correlation_analyzer.py  temporal_model.py  visual_encoder.py
src/orchestration/: __init__.py  dag.py  executor.py  task.py
src/pipeline/: __init__.py  detector.py  trainer.py
src/preprocessing/: __init__.py  audio_processor.py  face_detector.py  video_processor.py
src/realtime/: __init__.py  alerter.py  stream_processor.py
src/retrieval/: __init__.py  augmenter.py  vector_store.py
src/utils/: __init__.py  config.py  exceptions.py  logging.py
tests/: test_imports.py
